@startuml
 hide methods
 left to right direction
 skinparam classAttributeIconSize 0


 class Company {
   -designation
 }


 class SNSUser {
   -SNSNumber
 }

class Vaccine{
    -vaccineName
    -maxDoses
}
 class ScheduleVaccine{
  -scheduleDate
  -scheduleHour
  -snsUserID
  -centerName
  -vaccineName

 }
 class VaccinationCenter{
 -address
 -timeSlot
 }



 Company "1"---"*" SNSUser : knows >
 Company "1"---"*" Vaccine : knows >
 Company "1"---"*" VaccinationCenter : knows >
 Company "1"---"*" ScheduleVaccine : knows >

 ScheduleVaccine "1"---"*" SNSUser : for >
 ScheduleVaccine "1"---"*" VaccinationCenter : knows >
 ScheduleVaccine "1"---"*" Vaccine: knows >

VaccinationCenter "1"---"*" Vaccine: has >

SNSUser "1"--"*" VaccinationCenter : chooses >
SNSUser "1"--"*" Vaccine : chooses >
SNSUser "*"---"1" Company : is client of >
 SNSUser "1"---"*" ScheduleVaccine : schedules >

@enduml